--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: Blog
 author: Jose Felipe Araujo
-description: This is the personal blop of Jose Felipe Araujo
+description: This is the personal blog of Jose Felipe Araujo
